# gps_parser

./: CLAUDE.md  README.md  pyproject.toml
data/: postprocess.cfg  stations.cfg
docs/: DESIGN_shared_outlier_config.md
scripts/: setup-config.sh
src/gps_parser/: __init__.py  outlier_catalogs.py
src/gps_parser/cli/: __init__.py  config.py
tests/: test_config_cache.py  test_enhanced_config.py  test_gps_parser.py  test_gps_parser_init.py  test_init.py  test_outlier_catalogs.py  test_station_role.py
