[project]
name = "gps_parser"
version = "0.4.0"
authors = [
  { name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" },
  { name = "Maria Fernanda Gonzalez", email = "mariagr@vedur.is" },
]
description = "Enhanced GPS configuration management for Veðurstofan Íslands GPS processing ecosystem"
readme = "README.md"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9", 
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: System :: Systems Administration",
  "Intended Audience :: Science/Research",
]
maintainers = [{ name = "Benedikt Gunnar Ófeigsson", email = "bgo@vedur.is" }]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/bennigo/gps_parser"
Repository = "https://github.com/bennigo/gps_parser.git"
Issues = "https://github.com/bennigo/gps_parser/issues"
Documentation = "https://github.com/bennigo/gps_parser/blob/main/CLAUDE.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# packages = ["src/gps_parser"]
#
# [tool.hatch.build.targets.sdist.force-include]
# "data" = "gps_parser" # Include the fixtures directory in the sdist
#
# [tool.hatch.build.targets.wheel]
# packages = ["src/gps_parser"]

# [tool.hatch.build.targets.wheel.force-include]
# "data" = "gps_parser" # Include the fixtures directory in the wheel
